components/kubernetes/gravitee-ingress-routes/am/gravitee-am-api-ingress-routes.yaml
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: http-gravitee-am-api
#   namespace: default
# spec:
#   entryPoints:
#     # - web
#     - default
#   routes:
#   - match: Host(`gravitee-am-api.mycompany.io`) && PathPrefix(`/notls`)
#     kind: Rule
#     services:
#     # ---
#     # Who am i ? I am Saint Nectaire.
#     # ---
#     # 'gravitee-am' is the helm relase name for my Helm dployment of
#     # Gravtiee AM  : should be in a valuees.yaml for a helm chart.
#     - name: gravitee-am-management-api
#       port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: https-gravitee-am-api
  namespace: default
spec:
  entryPoints:
    # ok, "websecure" est un référence au nom d'un "containerPort" pour le "kind: Deployment" de "Traefik" (et non pas whoami)
    # en gros, c'est poru dire "dans quel utyau, le http, ou le https, je mets mon app?"
    - websecure
  routes:
  - match: Host(`gravitee-am-ui.mycompany.io`) && PathPrefix(`/management`)
  # - match: Host(`gravitee-am-api.mycompany.io`)
  # - match: Host(`gravitee-am-ui.mycompany.io`) && PathPrefix(`/management`)
  #     labels:
  #    - "traefik.backend=graviteeio-am-managementapi"
  #    - "traefik.frontend.rule=Host:am.gravitee.io;PathPrefix:/management,/admin"
  # - match: Host(`gravitee-am-ui.mycompany.io`) && PathPrefix(`/admin`)
  # - match: Host(`gravitee-am-api.mycompany.io`) && PathPrefix(`/tls`)
    kind: Rule
    services:
    - name: gravitee-am-management-api
      port: 83 # cf. [kubectl describe service/gravitee-am-management-api|grep 'Port:']
    # middlewares:
      # - name: example
  - match: Host(`gravitee-am-ui.mycompany.io`) && PathPrefix(`/admin`)
    kind: Rule
    services:
    - name: gravitee-am-management-api
      port: 83 # cf. [kubectl describe service/gravitee-am-management-api|grep 'Port:']
    # middlewares:
      # - name: example
  tls:
    certResolver: default
    # certResolver: gio-pki
